Add Wazuh to ineligible solutions with telemetry collection details

--- a/eligibility.html
+++ b/eligibility.html
@@ -203,6 +203,17 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="exclusion-row">
+                        <div class="product-col">Wazuh</div>
+                        <div class="primary-reason-col">No Native Telemetry Collection</div>
+                        <div class="details-col">
+                            <ul>
+                                <li>Relies on external tools (Sysmon, OSQuery) for basic endpoint telemetry collection</li>
+                                <li>Functions primarily as a log aggregator rather than direct telemetry collector</li>
+                                <li>Lacks native real-time event streaming capabilities for endpoint activities</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
