--- a/linux.html
+++ b/linux.html
@@ -14,6 +14,10 @@
     <title>EDR Telemetry Project - Linux</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Add table improvements CSS -->
+    <link rel="stylesheet" href="css/table-improvements.css">
+    <!-- Add heading links CSS -->
+    <link rel="stylesheet" href="css/heading-links.css">
     <!-- Meta tag for mobile responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -57,12 +61,12 @@
     </nav>
 
     <div class="hero-section">
+        <div class="snow-container" id="snow"></div>
         <div class="hero-content">
             <h1>Linux EDR Telemetry</h1>
             <p>Explore detailed telemetry capabilities and comparisons for Linux-based EDR solutions.</p>
         </div>
     </div>
-    <div class="snow-container" id="snow"></div>
     <div class="content-section">
         <!-- Add Legend Section -->
         <div class="legend-container">
