--- a/windows.html
+++ b/windows.html
@@ -14,6 +14,10 @@
     <title>EDR Telemetry Project - Windows</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Add table improvements CSS -->
+    <link rel="stylesheet" href="css/table-improvements.css">
+    <!-- Add heading links CSS -->
+    <link rel="stylesheet" href="css/heading-links.css">
     <!-- Meta tag for mobile responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
